--- a/META.yml
+++ b/META.yml
@@ -6,10 +6,12 @@ build_requires:
   ExtUtils::MakeMaker: 6.36
   Test::More: 0
 configure_requires:
-  ExtUtils::MakeMaker: 6.36
-distribution_type: module
-dynamic_config: 1
-generated_by: 'Module::Install version 1.04'
+  CPAN::Meta: 0
+  CPAN::Meta::Prereqs: 0
+  ExtUtils::MakeMaker: 0
+  Module::Build: 0.38
+dynamic_config: 0
+generated_by: 'Minilla/v0.6.6, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -17,8 +19,17 @@ meta-spec:
 name: Net-Hadoop-HuahinManager
 no_index:
   directory:
-    - inc
     - t
+    - xt
+    - inc
+    - share
+    - eg
+    - examples
+    - author
+provides:
+  Net::Hadoop::HuahinManager:
+    file: lib/Net/Hadoop/HuahinManager.pm
+    version: 0.03
 requires:
   Furl: 0
   JSON: 0
@@ -27,5 +38,9 @@ requires:
   Try::Tiny: 0
   URI::Escape: 0
 resources:
-  license: http://dev.perl.org/licenses/
-version: 0.02
+  bugtracker: https://github.com/tagomoris/Net-Hadoop-HuahinManager/issues
+  homepage: https://github.com/tagomoris/Net-Hadoop-HuahinManager
+  repository: git://github.com/tagomoris/Net-Hadoop-HuahinManager.git
+version: 0.03
+x_contributors:
+  - 'TAGOMORI Satoshi <tagomoris@gmail.com>'
